test/algeff/wrong/eff-rec4.kk.out
test/algeff/wrong/eff-rec4.kk(7,23): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead